# test_place

./: .gitignore  CMakeLists.txt
cpp_place/: CMakeLists.txt
cpp_place/include/: imu.h
cpp_place/src/: imu.cpp  main.cpp
py_place/: fake_imu.csv  (+1 more)
ros2_projects/project_1/install/my_robot_description/share/my_robot_description/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
ros2_projects/project_1/install/my_robot_description/share/my_robot_description/cmake/: ament_cmake_export_dependencies-extras.cmake  export_my_robot_description__rosidl_generator_cExport-noconfig.cmake  export_my_robot_description__rosidl_generator_cExport.cmake  export_my_robot_description__rosidl_generator_cppExport.cmake  export_my_robot_description__rosidl_generator_pyExport-noconfig.cmake  export_my_robot_description__rosidl_generator_pyExport.cmake  export_my_robot_description__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_my_robot_description__rosidl_typesupport_fastrtps_cExport.cmake  export_my_robot_description__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_my_robot_description__rosidl_typesupport_fastrtps_cppExport.cmake  my_robot_descriptionConfig.cmake  my_robot_description__rosidl_typesupport_cExport-noconfig.cmake  my_robot_description__rosidl_typesupport_cExport.cmake  my_robot_description__rosidl_typesupport_cppExport-noconfig.cmake  my_robot_description__rosidl_typesupport_cppExport.cmake  my_robot_description__rosidl_typesupport_introspection_cExport-noconfig.cmake  my_robot_description__rosidl_typesupport_introspection_cExport.cmake  my_robot_description__rosidl_typesupport_introspection_cppExport-noconfig.cmake  my_robot_description__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
ros2_projects/project_1/install/my_robot_description/share/my_robot_description/config/: wall_follow_gazebo.yaml
ros2_projects/project_1/install/my_robot_description/share/my_robot_description/launch/: gazebo_drive.launch.py  gazebo_localization.launch.py  gazebo_slam.launch.py  gazebo_with_rviz.launch.py
ros2_projects/project_1/install/my_robot_description/share/my_robot_description/maps/: README.md
ros2_projects/project_1/install/my_robot_description/share/my_robot_description/msg/: SafetyDebug.idl  SafetyDebug.json  SafetyDebug.msg  WallFollowDebug.idl  WallFollowDebug.json  WallFollowDebug.msg
ros2_projects/project_1/install/my_robot_description/share/my_robot_description/rust/: Cargo.toml
ros2_projects/project_1/install/my_robot_description/share/my_robot_description/rust/src/: msg.rs
ros2_projects/project_1/install/my_robot_description/share/my_robot_description/rust/src/msg/: rmw.rs
ros2_projects/project_1/install/my_robot_description/share/my_robot_description/rviz/: localization.rviz  motion.rviz  slam.rviz
ros2_projects/project_1/install/my_robot_description/share/my_robot_description/urdf/: base.urdf  gazebo.xacro  robot.urdf.xacro  sensors.xacro
ros2_projects/project_1/src/my_robot_description/: CMakeLists.txt  README.md  package.xml
ros2_projects/project_1/src/my_robot_description/config/: gazebo_bridge.yaml  slam_localization_gazebo.yaml  slam_toolbox_gazebo.yaml  wall_follow.yaml
ros2_projects/project_1/src/my_robot_description/launch/: animate_wheels.launch.py  display.launch.py  gazebo_wall_follow.launch.py  gazebo_world.launch.py  keyboard_control.launch.py  move_robot.launch.py  spawn_robot_in_room.launch.py  wall_follow.launch.py
ros2_projects/project_1/src/my_robot_description/rviz/: model.rviz  motion.rviz
ros2_projects/project_1/src/my_robot_description/scripts/: auto_initial_pose.py  diff_drive_demo.py  keyboard_teleop.py  odom_to_tf.py  virtual_lidar.py  wheel_demo.py
ros2_projects/project_1/src/my_robot_description/urdf/: chassis.xacro  robot.urdf.xacro  sensors.xacro  wheels.xacro
ros2_projects/project_1/src/my_robot_description/worlds/: learning_room.sdf
(+92 files in other folders)
